[package]
name = "tokio-tungstenite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"]}
warp = "0.3.6"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "*"
